--- a/index.html
+++ b/index.html
@@ -18,27 +18,27 @@
   <h2>Some of my web projects</h2>
   <div class="projects-grid">
     <a class = "project-tile"
-      href="https://codepen.io/ParisRigakis/full/RwwpEyB"
+      href="https://parisrigakis.github.io/MyWebGame/"
       target="_blank">
       <img class = "project-image"
-            src = "https://cdn.mos.cms.futurecdn.net/c7dppKDbG3JXuMfybV5tUX-970-80.jpg"
+            src = "https://img.itch.zone/aW1hZ2UvMjEyMTgxLzk5OTIxNS5wbmc=/original/MTupSv.png"
             alt = "project"/>
       <p class = "project-title">
-       Tribute Page
+       Galaxy Defender Browser Game
       </p>
     </a>
     <a class = "project-tile"
-      href="https://codepen.io/ParisRigakis/full/qBBmmOx"
+      href="https://parisrigakis.github.io/webprojects/RomanConverter.html"
       target="_blank">
       <img class = "project-image"
-            src = "https://chunxuchai.files.wordpress.com/2019/04/ae785e69012d59eff4916f7576637c212611159f.jpg"
+            src = "https://parisrigakis.github.io/webprojects/RomanConverter.PNG"
             alt = "project"/>
       <p class = "project-title">
-       Survey Form
+       JS Roman Numeral Converter
       </p>
     </a>
     <a class = "project-tile"
-      href="https://codepen.io/ParisRigakis/full/QWWgMRR"
+      href="https://parisrigakis.github.io/webprojects/SpringPage.html"
       target="_blank">
       <img class = "project-image"
             src = "https://i.ibb.co/VLm6W4B/Capture.png"
@@ -48,7 +48,7 @@
       </p>
     </a>
     <a class = "project-tile"
-      href="https://codepen.io/ParisRigakis/full/OJJZBYR"
+      href="https://parisrigakis.github.io/webprojects/TechnicalDocumentation.html"
       target="_blank">
       <img class = "project-image"
             src = "https://screenshot.codepen.io/2147258.ZjLbZj.6c1c16bf-d58a-4c7e-8017-e70c0ed5ff5a.png"
@@ -60,7 +60,7 @@
   </div>
 </section>
 <section id = "contact">
-  <h3>My Web Profile</h3>
+  <h3>My Web Development Certificates</h3>
   <a  id ="profile-link" 
       href = "https://www.freecodecamp.org/parisrigakis"
       target="_blank">
@@ -71,7 +71,6 @@
   </a>
   
 </section>
-
 <style>
 
 .project-image{
@@ -178,7 +177,8 @@ h2{
 }
 #projects{
   background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
-  padding-bottom: 30px;
+  padding-bottom: 150px;
+  padding-top: 100px;
 }
 .projects-grid {
   display: grid;
