--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <nav id = "navbar" >
   <ul class = "navlist">
     <li><a href = #welcome-section>About</a></li>
-    <li><a href = #projects>Work</a></li>
-    <li><a href = #contact>Contact</a></li>
+    <li><a href = #projects>Projects</a></li>
+    <li><a href = #contact>Certificates</a></li>
   
     
   </ul>
