--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </p>
     </a>
     <a class = "project-tile"
-      href="https://parisrigakis.github.io/webprojects/RomanConverter.html"
+      href="./RomanConverter.html"
       target="_blank">
       <img class = "project-image"
             src = "https://parisrigakis.github.io/webprojects/RomanConverter.PNG"
